Changed client style, added MIT license

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Canvas Test: Snake</title>
+		<title>Websocket Snake Experiment</title>
+		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://jashkenas.github.com/coffee-script/extras/coffee-script.js"></script>
 		<script type="text/coffeescript" src="client.coffee"></script>
 	</head>
 	<body>
+		<a href="http://github.com/dhoelzgen/snake">
+			<img id="ribbon" src="https://d3nwyuy0nl342s.cloudfront.net/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub">
+		</a>
+		<h1>
+			Websocket Snake Experiment
+		</h1>
 		<canvas id="stage" width="500" height="500">
 			Canvas not supported.
 		</canvas>
+		<p>
+			Released under the <a href="https://github.com/dhoelzgen/snake/blob/master/LICENSE" target="_blank">MIT License</a>
+		</p>
 	</body>
 </html>
