--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://jashkenas.github.com/coffee-script/extras/coffee-script.js"></script>
+		<script type="text/javascript" src="http://localhost/socket.io/socket.io.js"></script>
 		<script type="text/coffeescript" src="client.coffee"></script>
 	</head>
 	<body>
