Added notice on index page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			Canvas not supported.
 		</canvas>
 		<p>
-			Released under the <a href="https://github.com/dhoelzgen/snake/blob/master/LICENSE" target="_blank">MIT License</a>
+			Hosted by <a href="http://www.9elements.com/" target="_blank">9elements</a>. Released under the <a href="https://github.com/dhoelzgen/snake/blob/master/LICENSE" target="_blank">MIT License</a>.
 		</p>
 	</body>
 </html>
