Added kill and death count

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<h1>
 			Websocket Snake Experiment
 		</h1>
+		<div id="scoreboard">
+			<span id="kills">Kills: 0</span> - 
+			<span id="deaths">Deaths: 0</span>
+		</div>
 		<canvas id="stage" width="500" height="500">
 			Canvas not supported.
 		</canvas>
